# glibrary

./: .gitignore  CMakeLists.txt  README.md  SConstruct  compileCmesh  meson.build  meson.sh  notes  settings.xcconfig  todo
ci/: build.sh  runExamples.sh  testC12.sh  testSciG.sh
cmake/: XercesC.cmake  clhep.cmake  geant4.cmake  gfunctions.cmake  glibrary.cmake  glibrary_functions.cmake  xercesc.cmake
dependencies/: meson.build
eventDispenser/: SConstruct  eventDispenser.cc  eventDispenser.h  eventDispenserOptions.cc  meson.build  notes
eventDispenser/examples/: simple.cc
g4display/: SConscript  SConstruct  example.cc  example.jcard  g4DisplayProperties.cc  g4DisplayProperties.h  g4SceneProperties.cc  g4SceneProperties.h  g4Text.cc  g4controls.h  g4displayConventions.h  g4displayOptions.cc  g4displayOptions.h  meson.build  notes  settings.xcconfig
g4system/: SConstruct  g4systemOptions.cc  g4world.cc  notes  todo
gQtButtonsWidget/: SConstruct  gQtButtonsWidgetOptions.cc  gQtButtonsWidgetOptions.h  meson.build  notes  settings.xcconfig
gdata/: SConstruct  annotated.html  annotated_dup.js  classGDataCollection.html  classGDataCollection.js  classGDataCollection__coll__graph.map  classGDataCollection__coll__graph.md5  classGDetectorObservables.html  classGDetectorObservables.js  classGDetectorObservables__coll__graph.map  classGDetectorObservables__coll__graph.md5  classGDigitizedData.html  classGDigitizedData.js  classGDigitizedData__coll__graph.map  classGDigitizedData__coll__graph.md5  classGEventData.html  classGEventData.js  classGEventData__coll__graph.map  classGEventData__coll__graph.md5  classGEventHeader.html  classGEventHeader.js  classGEventHeader__coll__graph.map  classGEventHeader__coll__graph.md5  classGObservables.html  classGObservables.js  classGObservables__coll__graph.map  classGObservables__coll__graph.md5  classGTrueInfoData.html  classGTrueInfoData.js  classGTrueInfoData__coll__graph.map  classGTrueInfoData__coll__graph.md5  classes.html  dir_468d6d4bd32be4673a29451a59a89c0c.html  dir_fa8ebf88ca94b1db6a03b62662a9b79c.html  example_8cc_source.html  gDataCollection_8cc_source.html  gDataCollection_8h_source.html  gDigitizedData_8cc_source.html  gDigitizedData_8h_source.html  gEventData_8cc_source.html  (+11 more)
gdata/event/: gDigitizedData.cc  gDigitizedData.h  gEventDataCollection.h  gEventDataCollectionHeader.h
gdata/examples/: event_data.cc
gdata/frame/: f_dataformat_vtp.h  gFrameDataCollection.cc  gFrameDataCollection.h  gFrameDataCollectionHeader.cc  gFrameDataCollectionHeader.h
gdata/search/: all_0.js  classes_0.js
gdynamicDigitization/: SConstruct  ctofRoutinesExample.cc  gDosimeterDigitization.cc  gFluxDigitization.cc  gParticleCounterDigitization.cc  gdynamicdigitization.cc  gdynamicdigitization.h  greadoutSpecs.h  meson.build
gdynamicDigitization/examples/: ctofRoutinesExample.cc  plugin_load_example.cc
gfactory/: Car_8h_source.html  TeslaFactory_8cc_source.html  classCar.html  classCar.js  classCar__coll__graph.map  classCar__coll__graph.md5  classCar__inherit__graph.map  classCar__inherit__graph.md5  classFord.html  classFord__inherit__graph.map  classFord__inherit__graph.md5  classGManager.html  classGManager.js  classTesla.html  classTesla__coll__graph.map  classTesla__inherit__graph.md5  example_8cc_source.html  functions.html  functions_func.html  gdl.h  gdl_8h_source.html  gfactory.h  gfactory_8h_source.html  meson.build  navtreeindex0.js  notes  structDynamicLib.html
ghit/: SConstruct  ghit.cc  ghit.h  meson.build  notes  settings.xcconfig
goptions/: CMakeLists.txt  SConstruct  advancedExample_8cc_source.html  classGOption.html  classGOption.js  classGOptions.html  classGOptions.js  classGOptions__coll__graph.map  classGOptions__coll__graph.md5  classGSwitch.html  cumulativeStructureExample_8cc_source.html  functions.html  functions_func.html  goption.cc  goption_8cc_source.html  goptions.cc  goptions.h  goptionsConventions.h  goptionsConventions_8h_source.html  goptions_8cc_source.html  goptions_8h_source.html  json.hpp  meson.build  navtreeindex0.js  notes  simpleExample_8cc_source.html  structureExample_8cc_source.html  todo
goptions/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js
gparticle/: SConstruct  gparticle.cc  gparticle.h  gparticleConventions.h  gparticleOptions.cc  gparticleOptions.h  notes  settings.xcconfig
gphysics/: SConscript  SConstruct  example.cc  formatPhysList.py  gphysics.cc  gphysics.h  gphysicsConventions.h  gphysicsOptions.cc  notes  settings.xcconfig
gsplash/: SConstruct  notes  settings.xcconfig
gstreamer/: SConscriptJLABSRODLL  SConscriptROOTDLL  SConscriptTEXTDLL  SConstruct  gstreamerOptions.cc  notes  settings.xcconfig  settingsROOT.xcconfig
gsystem/: SConscript  SConstruct  gmaterial.cc  todo  (+9 more)
gtouchable/: CMakeLists.txt  SConstruct  example.cc  gtouchable.cc  gtouchable.h  meson.build
gtranslationTable/: CMakeLists.txt  README.md  SConstruct  gtranslationTableOptions.cc  notes
guts/: CMakeLists.txt  SConstruct  example_8cc_source.html  gstring_8cc_source.html  gstring_8h_source.html  gutilities.cc  gutsConventions.cc  gutsConventions.h  gutsConventions_8cc_source.html  gutsConventions_8h_source.html  index.html  meson.build  navtreedata.js
subprojects/eventDispenser/: eventDispenser.cc  meson.build
subprojects/gdata/: example.cc  meson.build
subprojects/gdata/event/: gDigitizedData.cc
subprojects/gdata/frame/: gFrameDataCollection.h
subprojects/gdynamicDigitization/: meson.build
subprojects/gdynamicDigitization/examples/: plugin_load_example.cc
subprojects/gfactory/: gfactory.h  meson.build
subprojects/ghit/: meson.build  notes
subprojects/goptions/: meson.build
subprojects/guts/: meson.build
subprojects/textProgressBar/: meson.build  textProgressBarOptions.h
subprojects/textProgressBar/examples/: bar.cc
tests/: CMakeLists.txt
tests/clhep/: CMakeLists.txt  clhep_test.cc
tests/cpp20/: CMakeLists.txt
tests/geant4/: CMakeLists.txt  geant4_test.cc
tests/xercesc/: CMakeLists.txt  xercesc_test.cc
(+59 files in other folders)
